--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
     <string name="app_name">Ioasys_test</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--    Login Screen strings-->
+    <string name="login_welcome_label">Bem-vindo ao Empresas</string>
+    <string name="login_lorem_ipsum_label">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
+    <string name="login_enter_label">Entrar</string>
+    <string name="login_invalid_credentials">Credenciais informadas são inválidas, tente novamente.</string>
+
+
 </resources>
